(fixed the wrap problem?

--- a/style.css
+++ b/style.css
@@ -4,12 +4,10 @@
 }
 
 body {
-    flex: auto;
     padding: 0px;
     margin: 0px;
-
     background-image: url("starter_files/images/light-grey-wood.jpeg");
-    background-size: 100% 100%;
+    background-size: 100% 100%; 
     }
    
 
@@ -27,31 +25,36 @@ body {
 .sub-header {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     padding: 08px;
     font-family: fantasy;
     color: midnightblue;
+    background-color: blanchedalmond;
 }
 
 .flex-container {
-    width: 750px;
+    width: auto;
     display: flex;
     flex-wrap: wrap;
-    
+
 }
 
 
 .puppy-card {
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    padding: 20px;
+    padding: 10px;
+    width: auto;
 
 }
 
 .puppy-card img {
-   width: 200px;
+  width: 200px;
    padding: 20px;
 }
 
@@ -63,7 +66,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    align-items: space-around;
 }
 
 button {
